feat:update index

--- a/index.html
+++ b/index.html
@@ -73,7 +73,72 @@
         </section>
         <section class="history">
             <div class="wrapper">
-                
+                <div class="history__header">
+                    History
+                </div>
+                <div class="history__about1">
+                    <div class="history__description1">
+                        When the god Aion created the world of Atreia, 
+                        They created the Drakan—powerful dragon-like 
+                        beasts; performing Aion's will on the planet; and 
+                        protecting the Tower of Eternity. <br>For a time, 
+                        the Drakan obeyed Aion; but over time, they 
+                        began to enjoy their power, ignoring their 
+                        duties and abusing the humans who inhabited 
+                        Atreia.<br> Aion took notice, creating the twelve
+                        Empyrean Lords in response. As time went on, 
+                        the Lords decided that they had to be more 
+                        aggressive in stopping the Balaur. his conflict
+                        would come to be known as the Millennium War.
+                        As the war progressed, a faction of Lords began
+                        to view the war as unwinnable, and Lord Israphel
+                        proposed a discussion of peace with the Balaur. 
+                    </div>
+                    <div class="pics1">
+                        <img width="500px" src="/portfolio/img/aion-tiamat.jpg" alt="balaur lord" class="pic1">
+                    </div>
+                </div>
+                <div class="history__about2">
+                    <div class="history__description2">
+                        However, for reasons unclear, the negotiation failed. 
+                        When the Balaur arrived at the Tower of Eternity, a 
+                        commotion broke out, killing a Balaurian captain; 
+                        the remaining Balaur, enraged, marched upon and 
+                        destroyed the Tower, which set off a chain reaction 
+                        that threatened to destroy the planet. However, 
+                        Israphel and Siel made the ultimate sacrifice and 
+                        gave their own lives to protect Atreia. The world 
+                        was shattered into two "hemi-shells", with a dark 
+                        Abyss lying between them; but it was held together 
+                        by the aetheric field created from the Tower Lords' 
+                        sacrifice. The planet split in two parts. Inhabitants
+                        of the lower part named their world Elyos, and Asmodae
+                        has been created on the top part of planet. The inhabitants 
+                        of both parts did not suspect of the existence of each other.   
+                    </div>
+                    <div class="pics1">
+                        <img width="500px" src="/portfolio/img/aion-fight.jpg" alt="balaur lord" class="pic1">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="history2">
+            <div class="wrapper">
+                <div class="history__continue">
+                    <div class="history3">
+                        But one day, a strange portals began to appear throughout
+                        the all Asmodae. No one could understand their origin.
+                        A group of brave daevas entered the rift and were amazed.
+                        the inhabitants of that world were similar to the daevas 
+                        of the past. They had sparkling white wing, but they hearts were
+                        full of hatred to Asmodaes.
+                    </div>
+                    <div class="pics__container">
+                        <div class="pics__descript"></div>
+                        <div class="pics__descript"></div>
+                        <div class="pics__descript"></div>
+                    </div>
+                </div>                
             </div>
         </section>
     </main>
