--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <title>Portfolio</title>
     <link rel=stylesheet href="./css/reset.css">
     <link rel=stylesheet href="./css/style.css">
@@ -66,7 +66,7 @@
                         role of your character in Aion, especially in a combat situation.
                     </div>
                     <div class="intro__pictures1">
-                       <img width="700px" src="/portfolio/img/aion-pic2.jpeg" alt="aion warriors" class="pic1">
+                       <img src="/portfolio/img/aion-pic2.jpeg" alt="aion warriors" class="pic1">
                     </div>
                 </div>
             </div>
@@ -94,8 +94,8 @@
                         to view the war as unwinnable, and Lord Israphel
                         proposed a discussion of peace with the Balaur. 
                     </div>
-                    <div class="pics1">
-                        <img width="500px" src="/portfolio/img/aion-tiamat.jpg" alt="balaur lord" class="pic1">
+                    <div class="history__pictures1">
+                        <img src="/portfolio/img/aion-tiamat.jpg" alt="balaur lord" class="pic1">
                     </div>
                 </div>
                 <div class="history__about2">
@@ -116,8 +116,8 @@
                         has been created on the top part of planet. The inhabitants 
                         of both parts did not suspect of the existence of each other.   
                     </div>
-                    <div class="pics1">
-                        <img width="500px" src="/portfolio/img/aion-fight.jpg" alt="balaur lord" class="pic1">
+                    <div class="history__pictures1">
+                        <img src="/portfolio/img/aion-fight.jpg" alt="balaur lord" class="pic1">
                     </div>
                 </div>
             </div>
